<resources>
    <string name="app_name">Minhas Notas</string>
    <string name="description_delete">Deletar nota</string>
    <string name="description_fab">Criar nova nota de texto</string>
    <string name="et_description_description">Descrição</string>
    <string name="et_title_description">Título</string>
    <string name="et_user">E-mail</string>
    <string name="et_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="tv_registrar">Registrar</string>
    <string name="tv_recuperar">Recuperar</string>
    <string name="tv_slogan">Organize sua vida, tome notas</string>
    <string name="tv_welcome">Bem-vindo!</string>
    <string name="btn_register">Registrar</string>
    <string name="et_tip">Dica de senha</string>
    <string name="tv_welcome_register">Registre-se*</string>
    <string name="tv_warning">*os dados serão salvos em seu dispositivo</string>
</resources>
