<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_h_mid"
        app:layout_constraintVertical_bias="1">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/et_user"
            android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h_mid"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/et_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_tip"
            android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_tip"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/et_password"
            android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_register"
        android:contentDescription="@string/btn_register"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/til_password"/>


    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="*os dados serão salvos em seu dispositivo"
        android:contentDescription="@string/tv_slogan"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/til_user"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="48sp"
        android:text="@string/tv_welcome_register"
        android:contentDescription="@string/tv_welcome_register"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_slogan"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

</android.support.constraint.ConstraintLayout>